# example-servant-elm

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  elm_repositories.bzl  package-lock.json  package.json  stackage_snapshot.json
assets/: BUILD.bazel
client/: BUILD.bazel
client/src/: App.elm  Main.elm
client/tests/: Tests.elm
docker/: Dockerfile
scripts/: BUILD.bazel  generate_elm_repositories.py
server/src/: Api.hs  App.hs  BUILD.bazel
server/test/: BUILD.bazel
