# load(
#     "@com_github_edschouten_rules_elm//elm:def.bzl",
#     "elm_binary",
#     "elm_library",
#     "elm_test",
# )
# load(
#     "@rules_haskell//haskell:defs.bzl",
#     "haskell_binary",
# )

# haskell_binary(
#     name = "generate-elm",
#     ...
# )

# genrule(
#     name = "api-src",
#     outs = ["src/Api.elm"],
#     ...
# )

# elm_library(
#     name = "api",
#     ...
# )

# elm_library(
#     name = "app",
#     ...
# )

# elm_binary(
#     name = "main",
#     ...
# )

# elm_test(
#     name = "tests",
#     ...
# )
